crates/captval_derive/tests/compile_fail/no_field_enum.rs
use captval_derive::Captval;

#[derive(Captval)]
pub enum ContactEnum {
    Name,
    Token,
}

fn main() {
    println!("hello");
}
