crates/captval_derive/tests/compile_fail/no_field_enum.stderr
error: Must derive on a struct

         = help: This macro can only be implemented on a struct.

               #[derive(Captval)]
               struct MyStruct {
                   #[captcha]
                   captval: String,
               }

 --> tests/compile_fail/no_field_enum.rs:4:10
  |
4 | pub enum ContactEnum {
  |          ^^^^^^^^^^^
